# sales-offer-crew

./: README.md  pyproject.toml
src/sales_offer_crew/: crew.py  main.py
src/sales_offer_crew/config/: agents.yaml  tasks.yaml
src/sales_offer_crew/models/: sales_offer.py
src/sales_offer_crew/tools/: airtable_tool.py
